Add gunicorn and clean up repo state, added links to footer, some changes in readme

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Web Security Scanner</title>
+  <title>CipherBeam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -483,7 +483,7 @@
             live security check
           </div>
         </div>
-        <h1>Web Security Scanner</h1>
+        <h1>CipherBeam</h1>
         <div class="subtitle">
           Enter a URL to get an instant security overview: HTTPS, headers, cookies, CORS, login forms and more.
         </div>
@@ -526,12 +526,12 @@
 
   <footer>
     <div class="footer-left">
-      © <span id="year"></span> Web Security Scanner
+      © <span id="year"></span> CipherBeam
     </div>
     <div class="footer-links">
-      <a href="mailto:contact@example.com">Contact</a>
-      <a href="#!" title="Soon">Other tools</a>
-      <a href="#!" title="About this tool">About</a>
+      <a href="https://dariomijic.com/contact">Contact</a>
+      <a href="https://lab.dariomijic.com/" title="Lab">Other tools</a>
+      <a href="https://dariomijic.com/" title="About me">About me</a>
     </div>
   </footer>
 
